# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* Makefile.am (SUBDIRS): Re-added kde directory.

	* README: Adjusted info-set.

	* THANKS: Added.

	* src/chemical-mime-database.xml.in: Fixed formatting issues and
	changed element name for chemical-mime-type to mime-type as used by
	fd.o. Added chemical/x-gamess-input for testing.

	* xsl/cmd_common.xsl: Fixed header.
	(write.chunk): Removed standalone and added media-type parameter.
	(header.desktop): Added template to generate the header part of
	KDE's .desktop files.
	(header.xml): Fixed. Use xsl:comment instead of xsl:text.

	* xsl/cmd_freedesktop_org.xsl: Fixed header and several parameters.
	(chemical-mime-type, mime-type): Fixed template to fit changes in
	src/chemical-mime-database.xml.in.
	(acronym|alias|comment|expanded-acronym|glob|magic|match|root-XML)
	(sub-class-of): Small changes.

	* xsl/cmd_gnome-keys.xsl: Ditto.
	(chemical-mime-type, mime-type): Ditto.

	* xsl/cmd_gnome-mime.xsl: Ditto.
	(chemical-mime-type, mime-type): Ditto.

	* xsl/cmd_kde.xsl: Added stylesheet for KDE's .desktop files.

	* kde/*.desktop.in: Removed (replaced by new flat database).

2006-04-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* configure.ac (AC_PACKAGE_VERSION): Bump version to 0.1.99 to show,
	where we want to go.

	* src/chemical-mime-database.xml.in: Fixed just a few formatting
	issues.

2006-04-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in: Added new flat database.

	* Makefile.am (SUBDIRS): Added new directories.

	* TODO: Moved information to the new flat database. Added a few points
	which are related to our latest change to a flat database file.

	* acinclude.m4: Added to provide a macro to get the location of
	xsltproc (and possible options to use).

	* configure.ac: Added new template to get xsltproc.
	(ALL_LINGUAS): Removed nl and fr for the moment (changes are too